Fix Docker build and update to Python 3.12 with colour-science 0.4.6   compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   beautiful-photometry:
     build: .
     ports:
-      - "5000:5000"
+      - "8080:8080"
     volumes:
       - ./CSVs:/app/CSVs:ro
       - ./uploads:/app/uploads
@@ -13,7 +13,7 @@ services:
       - FLASK_ENV=development
       - FLASK_DEBUG=1
     restart: unless-stopped
-    command: web
+    command: app.py
 
   # Alternative service for CLI usage
   beautiful-photometry-cli:
@@ -25,4 +25,4 @@ services:
       - PYTHONPATH=/app
     profiles:
       - cli
-    command: cli 
+    command: cli.py
