file upload   functionality and proper component refresh patterns in the   frontend, plus enhanced error handling and logging in the backend.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5001:8080"
     volumes:
-      - ./backend/CSVs:/app/CSVs:ro
+      - ./backend/CSVs:/app/CSVs
       - ./backend/uploads:/app/uploads
       - ./backend/out:/app/out
     environment:
@@ -37,7 +37,7 @@ services:
   beautiful-photometry-cli:
     build: ./backend
     volumes:
-      - ./backend/CSVs:/app/CSVs:ro
+      - ./backend/CSVs:/app/CSVs
       - ./backend/out:/app/out
     environment:
       - PYTHONPATH=/app
