--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Backend Python Flask service
   backend:
@@ -36,8 +34,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8080
-      - NEXT_PUBLIC_TS_API_URL=http://ts-backend:8081
+      - NEXT_PUBLIC_API_URL=http://localhost:5001
+      - NEXT_PUBLIC_TS_API_URL=http://localhost:8081
     depends_on:
       - backend
       - ts-backend
